--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://shubhamvandara.netlify.app/assets/png/logo.png"
-    />
+    <link rel="icon" href="https://i.ibb.co/mBqpwhV/sv-circle-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Front User | Shubham</title>
+    <title>CRUD Operation | Full Stack | Shubham Vandara</title>
   </head>
   <body>
     <div id="root"></div>
